[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/ZombieRanged.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Components/Blood.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Enemies/ZombieAltFinal.png" type="Texture" id=3]
[ext_resource path="res://Scripts/StatesZombieRanged.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Signals.gd" type="Script" id=5]
[ext_resource path="res://Sprites/icon-front.png" type="Texture" id=6]
[ext_resource path="res://Scripts/MonsterAudioPlayer.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.32317
height = 2.15788

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}

[sub_resource type="Animation" id=3]
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=4]
resource_name = "explode"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}

[sub_resource type="Animation" id=6]
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "taunt"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="SpatialMaterial" id=9]
params_billboard_mode = 1
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 3 )

[sub_resource type="CylinderShape" id=10]
radius = 5.0

[node name="ZombieRanged" type="KinematicBody"]
script = ExtResource( 1 )
anim_col = 28

[node name="Blood" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -0.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/explode = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/taunt = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = SubResource( 9 )
offset = Vector2( 0, -8 )
pixel_size = 0.02
texture = ExtResource( 3 )
vframes = 5
hframes = 30
frame = 5

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 10 )

[node name="States" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Signals" type="Node" parent="."]
script = ExtResource( 5 )

[node name="DirectionPlaceholder" type="Sprite3D" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, -1 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 28.0
max_db = 6.0
script = ExtResource( 7 )

[node name="SlopeRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.02356, 0 )
enabled = true

[node name="LeftOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.605177, 0.0534023 )
light_color = Color( 1, 1, 0.0156863, 1 )
omni_range = 0.5

[node name="RightOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.605177, -0.0484002 )
light_color = Color( 1, 1, 0.0156863, 1 )
omni_range = 0.5

[node name="ProjectileTimer" type="Timer" parent="."]
[connection signal="target_entered" from="." to="." method="_on_ImpTest_target_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="Signals" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area" to="Signals" method="_on_Area_body_entered"]
